Data exploration regressors

--- a/data_exploration_engineering.ipynb
+++ b/data_exploration_engineering.ipynb
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 847,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1999,15 +1999,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 828,
+   "execution_count": 848,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total offers completed 0\n",
-      "Percentage offers Completed 0.0\n"
+      "Total offers completed 16173\n",
+      "Percentage offers Completed 24.319935038570847\n"
      ]
     }
    ],
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 829,
+   "execution_count": 849,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2325,16 +2325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 839,
+   "execution_count": 850,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x130cb7610>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x130d772d0>"
       ]
      },
-     "execution_count": 839,
+     "execution_count": 850,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2357,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 837,
+   "execution_count": 859,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2365,21 +2365,24 @@
     "\n",
     "\n",
     "X = training_df.copy()\n",
+    "\n",
+    "X = X.drop(columns=['person','event','offer_id','offer_type','gender','age','total_days_of_membership'])\n",
+    "\n",
     "Y = training_df['completed']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, random_state=21)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 834,
+   "execution_count": 860,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(49875, 22)\n",
-      "(16626, 22)\n"
+      "(49875, 15)\n",
+      "(16626, 15)\n"
      ]
     }
    ],
@@ -2390,15 +2393,420 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 861,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>income</th>\n",
+       "      <th>reward</th>\n",
+       "      <th>difficulty</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>std_income</th>\n",
+       "      <th>std_age</th>\n",
+       "      <th>bogo</th>\n",
+       "      <th>discount</th>\n",
+       "      <th>informational</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>O</th>\n",
+       "      <th>completed</th>\n",
+       "      <th>type_of_membership</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>123302</th>\n",
+       "      <td>408</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.554217</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43300</th>\n",
+       "      <td>168</td>\n",
+       "      <td>79000.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.544444</td>\n",
+       "      <td>0.361446</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60889</th>\n",
+       "      <td>504</td>\n",
+       "      <td>35000.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.055556</td>\n",
+       "      <td>0.662651</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140241</th>\n",
+       "      <td>408</td>\n",
+       "      <td>44000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.155556</td>\n",
+       "      <td>0.289157</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98401</th>\n",
+       "      <td>0</td>\n",
+       "      <td>84000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.542169</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143812</th>\n",
+       "      <td>336</td>\n",
+       "      <td>116000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.955556</td>\n",
+       "      <td>0.759036</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102054</th>\n",
+       "      <td>336</td>\n",
+       "      <td>96000.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.733333</td>\n",
+       "      <td>0.987952</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93981</th>\n",
+       "      <td>504</td>\n",
+       "      <td>32000.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.022222</td>\n",
+       "      <td>0.349398</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142958</th>\n",
+       "      <td>576</td>\n",
+       "      <td>87000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.633333</td>\n",
+       "      <td>0.457831</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20141</th>\n",
+       "      <td>408</td>\n",
+       "      <td>43000.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.144444</td>\n",
+       "      <td>0.060241</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>49875 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        time    income  reward  difficulty  duration  std_income   std_age  \\\n",
+       "123302   408   40000.0       2          10         7    0.111111  0.554217   \n",
+       "43300    168   79000.0      10          10         5    0.544444  0.361446   \n",
+       "60889    504   35000.0       5           5         7    0.055556  0.662651   \n",
+       "140241   408   44000.0       0           0         4    0.155556  0.289157   \n",
+       "98401      0   84000.0       2          10        10    0.600000  0.542169   \n",
+       "...      ...       ...     ...         ...       ...         ...       ...   \n",
+       "143812   336  116000.0       2          10        10    0.955556  0.759036   \n",
+       "102054   336   96000.0      10          10         5    0.733333  0.987952   \n",
+       "93981    504   32000.0       5           5         7    0.022222  0.349398   \n",
+       "142958   576   87000.0       2          10        10    0.633333  0.457831   \n",
+       "20141    408   43000.0      10          10         5    0.144444  0.060241   \n",
+       "\n",
+       "        bogo  discount  informational    F    M    O  completed  \\\n",
+       "123302   0.0       1.0            0.0  0.0  1.0  0.0        0.0   \n",
+       "43300    1.0       0.0            0.0  0.0  1.0  0.0        0.0   \n",
+       "60889    1.0       0.0            0.0  1.0  0.0  0.0        0.0   \n",
+       "140241   0.0       0.0            1.0  0.0  1.0  0.0        0.0   \n",
+       "98401    0.0       1.0            0.0  0.0  1.0  0.0        0.0   \n",
+       "...      ...       ...            ...  ...  ...  ...        ...   \n",
+       "143812   0.0       1.0            0.0  1.0  0.0  0.0        0.0   \n",
+       "102054   1.0       0.0            0.0  1.0  0.0  0.0        1.0   \n",
+       "93981    1.0       0.0            0.0  0.0  1.0  0.0        0.0   \n",
+       "142958   0.0       1.0            0.0  0.0  1.0  0.0        0.0   \n",
+       "20141    1.0       0.0            0.0  0.0  1.0  0.0        0.0   \n",
+       "\n",
+       "        type_of_membership  \n",
+       "123302                   1  \n",
+       "43300                    0  \n",
+       "60889                    2  \n",
+       "140241                   0  \n",
+       "98401                    0  \n",
+       "...                    ...  \n",
+       "143812                   2  \n",
+       "102054                   0  \n",
+       "93981                    1  \n",
+       "142958                   0  \n",
+       "20141                    0  \n",
+       "\n",
+       "[49875 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 861,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 863,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestRegressor accuracy: 100.0%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "\n",
+    "\n",
     "rf = RandomForestRegressor(n_estimators = 100, random_state = 42)\n",
     "\n",
     "rf.fit(X_train, y_train)\n",
-    "print(f'Accuracy of SVM classifier on training set: {round(rf.score(X_train, y_train)*100,2)}%.')\n"
+    "print(f'RandomForestRegressor accuracy: {round(rf.score(X_train, y_train)*100,2)}%.')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 864,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "execution_count": 864,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_accuracy = rf.score(X_train, y_train)*100\n",
+    "training_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 866,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Logistic regression classifier on training set: 75.62%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "logistic_regressor = LogisticRegression()\n",
+    "\n",
+    "logistic_regressor.fit(X_train, y_train)\n",
+    "print(f'Accuracy of Logistic regression classifier on training set: {round(logistic_regressor.score(X_train, y_train)*100,2)}%.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 867,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75.61704260651629"
+      ]
+     },
+     "execution_count": 867,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_accuracy = logistic_regressor.score(X_train, y_train)*100\n",
+    "training_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 868,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'xgboost'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-868-5943d1bfe3f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
