training and model notebook

--- a/data_exploration_engineering.ipynb
+++ b/data_exploration_engineering.ipynb
@@ -2049,6 +2049,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insight from the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Offers completed by genre\n",
+    "    Offers completed by offer type\n",
+    "    Offers completed by income"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 835,
    "metadata": {},
@@ -2357,448 +2373,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 859,
+   "execution_count": 884,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X = training_df.copy()\n",
-    "\n",
-    "X = X.drop(columns=['person','event','offer_id','offer_type','gender','age','total_days_of_membership'])\n",
-    "\n",
+    "X = X.drop(columns=['person','event','offer_id','offer_type','gender','age','total_days_of_membership','completed'])\n",
     "Y = training_df['completed']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, random_state=21)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 860,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(49875, 15)\n",
-      "(16626, 15)\n"
-     ]
-    }
-   ],
    "source": [
-    "print(X_train.shape)\n",
-    "print(X_test.shape)"
+    "#### Finally we will save the training and test dataset to be used in the training notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 861,
+   "execution_count": 882,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>income</th>\n",
-       "      <th>reward</th>\n",
-       "      <th>difficulty</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>std_income</th>\n",
-       "      <th>std_age</th>\n",
-       "      <th>bogo</th>\n",
-       "      <th>discount</th>\n",
-       "      <th>informational</th>\n",
-       "      <th>F</th>\n",
-       "      <th>M</th>\n",
-       "      <th>O</th>\n",
-       "      <th>completed</th>\n",
-       "      <th>type_of_membership</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>123302</th>\n",
-       "      <td>408</td>\n",
-       "      <td>40000.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>0.554217</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43300</th>\n",
-       "      <td>168</td>\n",
-       "      <td>79000.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.544444</td>\n",
-       "      <td>0.361446</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60889</th>\n",
-       "      <td>504</td>\n",
-       "      <td>35000.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.055556</td>\n",
-       "      <td>0.662651</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>140241</th>\n",
-       "      <td>408</td>\n",
-       "      <td>44000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.155556</td>\n",
-       "      <td>0.289157</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98401</th>\n",
-       "      <td>0</td>\n",
-       "      <td>84000.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.600000</td>\n",
-       "      <td>0.542169</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143812</th>\n",
-       "      <td>336</td>\n",
-       "      <td>116000.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.955556</td>\n",
-       "      <td>0.759036</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102054</th>\n",
-       "      <td>336</td>\n",
-       "      <td>96000.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.733333</td>\n",
-       "      <td>0.987952</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93981</th>\n",
-       "      <td>504</td>\n",
-       "      <td>32000.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.022222</td>\n",
-       "      <td>0.349398</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142958</th>\n",
-       "      <td>576</td>\n",
-       "      <td>87000.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.633333</td>\n",
-       "      <td>0.457831</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20141</th>\n",
-       "      <td>408</td>\n",
-       "      <td>43000.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.144444</td>\n",
-       "      <td>0.060241</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>49875 rows × 15 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        time    income  reward  difficulty  duration  std_income   std_age  \\\n",
-       "123302   408   40000.0       2          10         7    0.111111  0.554217   \n",
-       "43300    168   79000.0      10          10         5    0.544444  0.361446   \n",
-       "60889    504   35000.0       5           5         7    0.055556  0.662651   \n",
-       "140241   408   44000.0       0           0         4    0.155556  0.289157   \n",
-       "98401      0   84000.0       2          10        10    0.600000  0.542169   \n",
-       "...      ...       ...     ...         ...       ...         ...       ...   \n",
-       "143812   336  116000.0       2          10        10    0.955556  0.759036   \n",
-       "102054   336   96000.0      10          10         5    0.733333  0.987952   \n",
-       "93981    504   32000.0       5           5         7    0.022222  0.349398   \n",
-       "142958   576   87000.0       2          10        10    0.633333  0.457831   \n",
-       "20141    408   43000.0      10          10         5    0.144444  0.060241   \n",
-       "\n",
-       "        bogo  discount  informational    F    M    O  completed  \\\n",
-       "123302   0.0       1.0            0.0  0.0  1.0  0.0        0.0   \n",
-       "43300    1.0       0.0            0.0  0.0  1.0  0.0        0.0   \n",
-       "60889    1.0       0.0            0.0  1.0  0.0  0.0        0.0   \n",
-       "140241   0.0       0.0            1.0  0.0  1.0  0.0        0.0   \n",
-       "98401    0.0       1.0            0.0  0.0  1.0  0.0        0.0   \n",
-       "...      ...       ...            ...  ...  ...  ...        ...   \n",
-       "143812   0.0       1.0            0.0  1.0  0.0  0.0        0.0   \n",
-       "102054   1.0       0.0            0.0  1.0  0.0  0.0        1.0   \n",
-       "93981    1.0       0.0            0.0  0.0  1.0  0.0        0.0   \n",
-       "142958   0.0       1.0            0.0  0.0  1.0  0.0        0.0   \n",
-       "20141    1.0       0.0            0.0  0.0  1.0  0.0        0.0   \n",
-       "\n",
-       "        type_of_membership  \n",
-       "123302                   1  \n",
-       "43300                    0  \n",
-       "60889                    2  \n",
-       "140241                   0  \n",
-       "98401                    0  \n",
-       "...                    ...  \n",
-       "143812                   2  \n",
-       "102054                   0  \n",
-       "93981                    1  \n",
-       "142958                   0  \n",
-       "20141                    0  \n",
-       "\n",
-       "[49875 rows x 15 columns]"
-      ]
-     },
-     "execution_count": 861,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train"
+    "X_train.to_csv('data/x_train.csv',index=False) \n",
+    "X_test.to_csv('data/x_test.csv',index=False) \n",
+    "y_train.to_csv('data/y_train.csv',index=False) \n",
+    "y_test.to_csv('data/y_test.csv',index=False) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 863,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RandomForestRegressor accuracy: 100.0%.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "\n",
-    "\n",
-    "rf = RandomForestRegressor(n_estimators = 100, random_state = 42)\n",
-    "\n",
-    "rf.fit(X_train, y_train)\n",
-    "print(f'RandomForestRegressor accuracy: {round(rf.score(X_train, y_train)*100,2)}%.')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 864,
+   "execution_count": 883,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100.0"
+       "(49875, 14)"
       ]
      },
-     "execution_count": 864,
+     "execution_count": 883,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "training_accuracy = rf.score(X_train, y_train)*100\n",
-    "training_accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 866,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of Logistic regression classifier on training set: 75.62%.\n"
-     ]
-    }
-   ],
-   "source": [
-    "logistic_regressor = LogisticRegression()\n",
-    "\n",
-    "logistic_regressor.fit(X_train, y_train)\n",
-    "print(f'Accuracy of Logistic regression classifier on training set: {round(logistic_regressor.score(X_train, y_train)*100,2)}%.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 867,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "75.61704260651629"
-      ]
-     },
-     "execution_count": 867,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training_accuracy = logistic_regressor.score(X_train, y_train)*100\n",
-    "training_accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 868,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xgboost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-868-5943d1bfe3f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
-     ]
-    }
-   ],
-   "source": [
-    "import xgboost as xgb"
+    "X_train.shape"
    ]
   },
   {
